Fixed menu button mobile active color.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -325,10 +325,6 @@ body {
       @media (max-width: 640px) {
         .icon-menu:hover rect {
           fill: #223347 !important; } }
-  .icon-menu.nav-close {
-    background-color: transparent; }
-    .icon-menu.nav-close rect {
-      fill: #223347; }
 
 @keyframes cross-l {
   0% {
@@ -345,17 +341,19 @@ body {
     transform: translateY(14.5px) rotate(45deg); }
   100% {
     transform: translateY(14.5px) rotate(45deg); } }
+  .icon-menu.nav-close rect:nth-child(odd) {
+    animation: cross-l .666s ease-out forwards; }
+  .icon-menu.nav-close rect:nth-child(even) {
+    animation: cross-r .666s ease-out forwards; }
+  @media (max-width: 640px) {
+    .icon-menu.nav-close rect {
+      fill: #223347 !important;
+      position: relative;
+      z-index: 1; }
       .icon-menu.nav-close rect:nth-child(odd) {
-        animation: cross-l .666s ease-out forwards; }
+        animation: cross-l 0.666s ease-out forwards !important; }
       .icon-menu.nav-close rect:nth-child(even) {
-        animation: cross-r .666s ease-out forwards; }
-      @media (max-width: 640px) {
-        .icon-menu.nav-close rect {
-          fill: #223347 !important; }
-          .icon-menu.nav-close rect:nth-child(odd) {
-            animation: cross-l 0.666s ease-out forwards !important; }
-          .icon-menu.nav-close rect:nth-child(even) {
-            animation: cross-r 0.666s ease-out forwards !important; } }
+        animation: cross-r 0.666s ease-out forwards !important; } }
   .icon-menu.nav-close:hover rect {
     fill: #f03246;
     width: 32px; }
